Add styles for modal spinner

--- a/src/less/modals.less
+++ b/src/less/modals.less
@@ -35,6 +35,12 @@
       margin-left: 5px;
     }
   }
+
+  .spinner {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+  }
 }
 
 // message-dialog pattern
